--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,13 @@
 	<canvas id="example" width = "800" height = "800">
 		挖掘机技术哪家强!
 	</canvas>
-	<p id="nearFar">The near and far values are displayed here.</p>
+	<ul style="float:right">
+  	<li id="TopValue">Top Level</li>
+  	<li><img id="Legend" src="Legend.png"></img></li>
+  	<li id="BotValue">Bot Level</li>
+	</ul>
+	
+	<p id="WheelValue">滚轮距离显示在此！</p>
   <script src="CanvasMatrix.js" type="text/javascript"></script>
 	<script src="webgl-utils.js"></script>
 	<script src="webgl-debug.js"></script>
